--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-FunctionalCalculator.xcodeproj/xcuserdata/farley.xcuserdatad/xcdebugger/.
+FunctionalCalculator.xcodeproj/xcuserdata/farley.xcuserdatad/xcdebugger/
 
